--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Curriculum Vitae</title>
-    <link rel="stylesheet" href="css/estilos.css">
+    <link rel="stylesheet" href="index.css">
 
 </head>
 <body>
@@ -84,7 +84,7 @@
     </div>
   </div>
 
-  <script src="js/function.js" ></script>
+  <script src="index.js" ></script>
   
 </body>
 </html>
